# lib-kafka

./: BEST_PRACTICES.md  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md
kafka/: Cargo.toml
kafka-messages/: Cargo.toml
kafka-messages/src/: lib.rs
kafka/examples/: consumer.rs  producer.rs
kafka/src/: consumer.rs  error.rs  lib.rs  producer.rs
kafka/tests/: integration_test.rs
