[workspace]
members = ["kafka-messages", "kafka"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zirv Marketing Automation"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
